--- a/assets/css/imagen.css
+++ b/assets/css/imagen.css
@@ -1,3 +1,11 @@
 body{
-    background-image: url("../img/uno.jp")
+    /* background-image: url("../img/uno.jpg") */
+}
+
+.fondo_gris {
+    background-color: red;
+}
+
+.fondo_azul {
+    background-color: blue;
 }
