--- a/assets/css/Formu.css
+++ b/assets/css/Formu.css
@@ -1,3 +1,6 @@
+aaaaaaaaaa{
+	left: 0px;
+}
 *{
 	padding: 0;
     margin: 0;
@@ -12,7 +15,7 @@
     border-radius: 5px;
 }
 .Titulo{
-	color: red;
+	color: green;
 	text-align: center;
 	font-size: 60px;
 }
