--- a/assets/css/Formu.css
+++ b/assets/css/Formu.css
@@ -1,25 +1,54 @@
-aaaaaaaaaa{
-	left: 0px;
-}
 *{
 	padding: 0;
     margin: 0;
 }
+body{
+	background-image: url("../img/uno.jpg");
+}
+.transiciones{
+	background-color: rgb(76, 167, 16);
+	width: 50px;
+	height: 50px;
+	transition: 0.5s;
+	text-align: center;
+	position:absolute;
 
+}
+
+div.transiciones:hover{
+	height: 100px;
+	width: 100px;
+	opacity: 0.1;
+	color: #000;
+
+}
+
+div.otro_div{
+    color:#000;
+   z-index:0;
+    position:absolute;
+}
+
+div.otro_div:hover{
+	color: red;
+}
 .Formulario{
 	width: 561px;
     height: 550px;
     position: relative;
     margin: 48px auto;
-    background-color: yellow;
-    border-radius: 5px;
+    background-color: rgb(145, 182, 10);
+	border-radius: 5px;
 }
 .Titulo{
-	color: green;
+	color:blue;
 	text-align: center;
 	font-size: 60px;
 }
 
+.Titulo:hover{
+	color: red;
+}
 .Nod{
 	border-radius: 5px;
 	border:none;
