--- a/assets/css/Formu.css
+++ b/assets/css/Formu.css
@@ -5,11 +5,14 @@
 body{
 	background-image: url("../img/uno.jpg");
 }
+::placeholder{
+	text-align: center;
+}
 .transiciones{
 	background-color: rgb(76, 167, 16);
 	width: 50px;
 	height: 50px;
-	transition: 0.5s;
+	transition: 5s;
 	text-align: center;
 	position:absolute;
 
@@ -18,8 +21,8 @@ body{
 div.transiciones:hover{
 	height: 100px;
 	width: 100px;
-	opacity: 0.1;
-	color: #000;
+	opacity: 0.5;
+	background-color: #000;
 
 }
 
