--- a/assets/css/Formu.css
+++ b/assets/css/Formu.css
@@ -2,6 +2,12 @@
 	padding: 0;
     margin: 0;
 }
+.borde{
+	border: 3px inset red;
+}
+.borde1{
+	border: 3px inset black;
+}
 body{
 	background-image: url("../img/uno.jpg");
 }
